<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wealthdoctor.bill_reminder.activity.BillReminderActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/toolbar"

            />

        <ScrollView
            android:id="@+id/bill_reminder_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/app_bar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bill_reminder_background_color"
                android:orientation="vertical"
                android:weightSum="6">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="@dimen/bill_reminder_due_date_ll_marginBottom"
                    android:layout_weight="3"
                    android:background="@color/bill_reminder_border_LL_background_color"
                    android:elevation="@dimen/cardview_compat_inset_shadow"
                    android:focusableInTouchMode="true"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/bill_reminder_due_LL_padding_top"
                    android:weightSum="4.5">

                    <LinearLayout
                        android:id="@+id/due_date_ll"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_margin="@dimen/bill_reminder_due_date_LL_margin"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <ImageView
                            android:id="@+id/bill_reminder_due_date"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/bill_reminder_due_date_logo_height"
                            android:layout_marginRight="@dimen/bill_reminder_due_date_logo_margin_right"
                            android:layout_marginTop="@dimen/bill_reminder_due_date_logo_margin_top"
                            android:layout_weight=".1"
                            android:src="@drawable/due_date" />

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/bill_reminder_due_date_text_input_layout"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".9"
                            android:orientation="horizontal"
                            app:errorEnabled="true">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/bill_reminder_due_date_edittext"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:backgroundTint="#616161"
                                android:focusable="false"
                                android:focusableInTouchMode="false"
                                android:hint="@string/bill_reminder_due_date"
                                android:onClick="selectDueDate" />

                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/due_date_time_ll"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_margin="@dimen/bill_reminder_due_date_LL_margin"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <ImageView
                            android:id="@+id/bill_reminder_due_date_time"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/bill_reminder_due_date_logo_height"
                            android:layout_marginRight="@dimen/bill_reminder_due_date_logo_margin_right"
                            android:layout_marginTop="@dimen/bill_reminder_due_date_logo_margin_top"
                            android:layout_weight=".1"
                            android:src="@drawable/ic_clock" />

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/bill_reminder_due_time_input_layout"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".9"
                            android:orientation="horizontal"
                            app:errorEnabled="true">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/bill_reminder_due_date_time_edittext"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:focusable="false"
                                android:focusableInTouchMode="false"
                                android:hint="@string/bill_reminder_due_time"
                                android:onClick="selectDueDateTime" />

                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginLeft="@dimen/bill_reminder_due_date_checkbox_margin_left"
                        android:layout_weight=".5"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <TextView
                            android:id="@+id/bill_reminder_checkbox_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/bill_reminder_already_paid" />

                        <CheckBox
                            android:id="@+id/bill_reminder_checkbox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/bill_reminder_tint_color" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_margin="@dimen/bill_reminder_amount_LL_margin"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <ImageView
                            android:id="@+id/bill_reminder_amount_image"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/bill_reminder_rupees_logo_height"
                            android:layout_marginRight="@dimen/bill_reminder_due_date_logo_margin_right"
                            android:layout_marginTop="@dimen/bill_reminder_due_date_logo_margin_top"
                            android:layout_weight=".1"
                            android:src="@drawable/rupees" />

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/bill_reminder_due_amount_input_layout"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".9"
                            app:errorEnabled="true">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/bill_reminder_amount_edittext"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:backgroundTint="@color/bill_reminder_tint_color"
                                android:hint="Enter Amount"
                                android:inputType="number" />
                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_margin="@dimen/bill_reminder_amount_LL_margin"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <ImageView
                            android:id="@+id/bill_reminder_information_image"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/bill_reminder_rupees_logo_height"
                            android:layout_marginRight="@dimen/bill_reminder_due_date_logo_margin_right"
                            android:layout_marginTop="@dimen/bill_reminder_due_date_logo_margin_top"
                            android:layout_weight=".1"
                            android:src="@drawable/information" />

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/bill_reminder_information_input_layout"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".9"
                            app:errorEnabled="true">


                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/bill_reminder_information_edittext"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:backgroundTint="@color/bill_reminder_tint_color"
                                android:inputType="number" />
                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="2"
                    android:background="#f2f2f2"
                    android:elevation="@dimen/cardview_compat_inset_shadow"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/bill_frequency"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/bill_reminder_billFrequency_margin"
                        android:layout_marginRight="@dimen/bill_reminder_billFrequency_margin"
                        android:layout_marginTop="@dimen/bill_reminder_billFrequency_margin"
                        android:text="@string/bill_reminder_bill_frequency" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/bill_reminder_billFrequency_margin"
                        android:layout_marginRight="@dimen/bill_reminder_billFrequency_margin"
                        android:layout_marginTop="@dimen/bill_reminder_billFrequency_margin"
                        android:orientation="horizontal"
                        android:weightSum="3"

                        >

                        <TextView
                            android:id="@+id/bill_reminder_monthly"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/bill_reminder_textView_margin"
                            android:layout_weight="1"
                            android:background="@color/bill_reminder_monthly_background_textview"
                            android:padding="@dimen/bill_reminder_textView_padding"
                            android:text="@string/bill_reminder_monthly_text_view"
                            android:textColor="@color/bill_reminder_textView_textColor"
                            android:textSize="@dimen/bill_reminder_text_size" />

                        <TextView
                            android:id="@+id/bill_reminder_bi_monthly"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/bill_reminder_textView_marginLeft"
                            android:layout_marginRight="@dimen/bill_reminder_textView_margin"
                            android:layout_weight="1"
                            android:background="@color/bill_reminder_monthly_background_textview"
                            android:padding="@dimen/bill_reminder_textView_padding"
                            android:text="@string/bill_reminder_bi_monthly"
                            android:textColor="@color/bill_reminder_textView_textColor"
                            android:textSize="@dimen/bill_reminder_text_size" />

                        <TextView
                            android:id="@+id/bill_reminder_quarterly"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/bill_reminder_textView_marginLeft"
                            android:layout_marginRight="@dimen/bill_reminder_textView_margin"
                            android:layout_weight="1"
                            android:background="@color/bill_reminder_monthly_background_textview"
                            android:padding="@dimen/bill_reminder_textView_padding"
                            android:text="@string/bill_reminder_quarterly"
                            android:textColor="@color/bill_reminder_textView_textColor"
                            android:textSize="@dimen/bill_reminder_text_size"

                            />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:orientation="horizontal"
                        android:weightSum="3">

                        <TextView
                            android:id="@+id/bill_reminder_half_yearly"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/bill_reminder_textView_margin"
                            android:layout_weight="1"
                            android:background="@color/bill_reminder_monthly_background_textview"
                            android:padding="@dimen/bill_reminder_textView_padding"
                            android:text="Half yearly"
                            android:textColor="@color/bill_reminder_textView_textColor"
                            android:textSize="@dimen/bill_reminder_text_size"

                            />

                        <TextView
                            android:id="@+id/bill_reminder_yearly"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/bill_reminder_textView_marginLeft"
                            android:layout_marginRight="@dimen/bill_reminder_textView_margin"
                            android:layout_weight="1"
                            android:background="@color/bill_reminder_monthly_background_textview"
                            android:padding="@dimen/bill_reminder_textView_padding"
                            android:text="Yearly"
                            android:textColor="@color/bill_reminder_textView_textColor"
                            android:textSize="@dimen/bill_reminder_text_size"

                            />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="@dimen/bill_reminder_addnote_LL_marginBottom"
                    android:layout_marginTop="@dimen/bill_reminder_addnote_LL_marginTop"
                    android:layout_weight="1"
                    android:background="@color/bill_reminder_addnote_LL_background"
                    android:elevation="@dimen/cardview_compat_inset_shadow"
                    android:focusableInTouchMode="true"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/bill_reminder_note"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/bill_reminder_addnote_background"

                        android:hint="@string/bill_reminder_add_a_note"
                        android:inputType="text|textMultiLine"
                        android:padding="@dimen/bill_reminder_addnote_padding"
                        android:textSize="@dimen/bill_reminder_addnote_textSize"

                        />

                    <View
                        android:id="@+id/dummyView"
                        android:layout_width="0dp"
                        android:layout_height="0dp" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/bill_reminder_floating_action_button_margin"
        android:clickable="true"

        app:backgroundTint="@color/bill_reminder_floating_action_background_tint"
        app:borderWidth="0dp"
        app:elevation="6dp"
        app:fabSize="normal"
        app:layout_anchor="@id/custom_toolbar_LL"
        app:layout_anchorGravity="bottom|right|end"
        app:srcCompat="@drawable/ic_action_check" />

</android.support.design.widget.CoordinatorLayout>
